# biodeg

./: .gitignore  .gitmodules  BioDegClassifier.py  README.md  biodeg.py  data  pyproject.toml
.github/workflows/: build.yml  ci.yml  package.yml
biodeg/: BioDegClassifier.py  BioDegClassifierModel.py  BioDegDescriptor.py  biodeg.py
biodeg/tests/: test_biodeg_descriptor.py
